components/z4ax5b8si-java-quarkus/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: z4ax5b8si-java-quarkus
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: z4ax5b8si-java-quarkus 
  name: z4ax5b8si-java-quarkus
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: z4ax5b8si-java-quarkus
    weight: 100
